@@ -7,6 +7,12 @@ Changes in version 0.1.2.9-??? - 2007-??-??
     - Do not rotate onion key immediately after setting it for the first
       time.
 
+  o Minor bugfixes (directory servers):
+    - Stop calling servers that have been hibernating for a long time
+      "stable". Also, stop letting hibernating or obsolete servers affect
+      uptime and bandwidth cutoffs.
+    - Stop listing hibernating servers in the v1 directory.
+
   o Minor bugfixes (other):
     - Fix an assert that could trigger if a controller quickly set then
       cleared EntryNodes.  (Bug found by Udo van den Heuvel.)
